Added custom fonts to the seed menu

--- a/src/main/resources/com/example/plantwidget_g18_gui/SeedMenu.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/SeedMenu.fxml
@@ -74,22 +74,64 @@
          </image>
       </ImageView>
       <Rectangle fx:id="seedSpecies2" arcHeight="5.0" arcWidth="5.0" disable="true" fill="#92eaa9" height="26.0" layoutX="235.0" layoutY="242.0" stroke="BLACK" strokeType="INSIDE" visible="false" width="131.0" />
-      <Label fx:id="seedSpeciesLabel2" layoutX="263.0" layoutY="246.0" text="PUMPKIN" visible="false" />
+      <Label fx:id="seedSpeciesLabel2" layoutX="263.0" layoutY="246.0" visible="false">
+         <graphic>
+            <ImageView fitHeight="41.0" fitWidth="105.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../images/pictureFonts/pumpkinOilFont.png" />
+               </image>
+            </ImageView>
+         </graphic></Label>
       <ProgressBar fx:id="seedDifficultyBar2" layoutX="229.0" layoutY="301.0" prefHeight="14.0" prefWidth="143.0" progress="0.53" stylesheets="@cssSheets.css" visible="false" />
       <Rectangle fx:id="seedSpeciesDifficualty2" arcHeight="5.0" arcWidth="5.0" disable="true" fill="#92eaa9" height="26.0" layoutX="235.0" layoutY="271.0" stroke="BLACK" strokeType="INSIDE" visible="false" width="131.0" />
-      <Label fx:id="seedDifficualty2" layoutX="274.0" layoutY="275.0" text="Difficualty" visible="false" />
+      <Label fx:id="seedDifficualty2" layoutX="274.0" layoutY="275.0" visible="false">
+         <graphic>
+            <ImageView fitHeight="20.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../images/pictureFonts/difficultyOilFont.png" />
+               </image>
+            </ImageView>
+         </graphic></Label>
       <Button fx:id="chooseSeedButtonExtended3" layoutX="406.0" layoutY="111.0" mnemonicParsing="false" onAction="#hideExtendedSeedMenu3" prefHeight="246.0" prefWidth="152.0" styleClass="backgroundColor" stylesheets="@cssSheets.css" visible="false" />
       <Rectangle fx:id="seedSpecies3" arcHeight="5.0" arcWidth="5.0" disable="true" fill="#92eaa9" height="26.0" layoutX="416.0" layoutY="244.0" stroke="BLACK" strokeType="INSIDE" visible="false" width="131.0" />
-      <Label fx:id="seedSpeciesLabel3" layoutX="444.0" layoutY="248.0" text="MONSTERA" visible="false" />
+      <Label fx:id="seedSpeciesLabel3" layoutX="430.0" layoutY="248.0" prefHeight="17.0" prefWidth="111.0" visible="false">
+         <graphic>
+            <ImageView fitHeight="19.0" fitWidth="97.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../images/pictureFonts/monsteraOilFont.png" />
+               </image>
+            </ImageView>
+         </graphic></Label>
       <ProgressBar fx:id="seedDifficultyBar3" layoutX="410.0" layoutY="303.0" prefHeight="14.0" prefWidth="143.0" progress="0.53" stylesheets="@cssSheets.css" visible="false" />
       <Rectangle fx:id="seedSpeciesDifficualty3" arcHeight="5.0" arcWidth="5.0" disable="true" fill="#92eaa9" height="26.0" layoutX="417.0" layoutY="273.0" stroke="BLACK" strokeType="INSIDE" visible="false" width="131.0" />
-      <Label fx:id="seedDifficualty3" layoutX="455.0" layoutY="277.0" text="Difficualty" visible="false" />
+      <Label fx:id="seedDifficualty3" layoutX="455.0" layoutY="277.0" visible="false">
+         <graphic>
+            <ImageView fitHeight="32.0" fitWidth="99.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../images/pictureFonts/difficultyOilFont.png" />
+               </image>
+            </ImageView>
+         </graphic></Label>
       <Button fx:id="chooseSeedButtonExtended1" layoutX="43.0" layoutY="111.0" mnemonicParsing="false" onAction="#hideExtendedSeedMenu1" prefHeight="246.0" prefWidth="152.0" styleClass="backgroundColor" stylesheets="@cssSheets.css" visible="false" />
       <Rectangle fx:id="seedSpecies1" arcHeight="5.0" arcWidth="5.0" disable="true" fill="#92eaa9" height="26.0" layoutX="54.0" layoutY="242.0" stroke="BLACK" strokeType="INSIDE" visible="false" width="131.0" />
-      <Label fx:id="seedSpeciesLabel1" layoutX="82.0" layoutY="248.0" text="CACTUS" visible="false" />
+      <Label fx:id="seedSpeciesLabel1" layoutX="82.0" layoutY="248.0" prefHeight="17.0" prefWidth="73.0" visible="false">
+         <graphic>
+            <ImageView fitHeight="23.0" fitWidth="89.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../images/pictureFonts/cactusOilFont.png" />
+               </image>
+            </ImageView>
+         </graphic></Label>
       <ProgressBar fx:id="seedDifficultyBar1" layoutX="47.0" layoutY="301.0" prefHeight="14.0" prefWidth="143.0" progress="0.53" stylesheets="@cssSheets.css" visible="false" />
       <Rectangle fx:id="seedSpeciesDifficualty1" arcHeight="5.0" arcWidth="5.0" disable="true" fill="#92eaa9" height="26.0" layoutX="54.0" layoutY="271.0" stroke="BLACK" strokeType="INSIDE" visible="false" width="131.0" />
-      <Label fx:id="seedDifficualty1" layoutX="91.0" layoutY="275.0" text="Difficualty" visible="false" />
+      <Label fx:id="seedDifficualty1" layoutX="92.0" layoutY="275.0" prefHeight="17.0" prefWidth="199.0" visible="false">
+         <graphic>
+            <ImageView fitHeight="21.0" fitWidth="91.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../images/pictureFonts/difficultyOilFont.png" />
+               </image>
+            </ImageView>
+         </graphic></Label>
       <ImageView fx:id="seedImage3" disable="true" fitHeight="113.0" fitWidth="152.0" layoutX="407.0" layoutY="131.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/plant3/monsteraLvl4.png" />
@@ -100,9 +142,30 @@
             <Image url="@../../../images/plant1/cactusLvl4.png" />
          </image>
       </ImageView>
-      <Button fx:id="plantNewSeedButton1" layoutX="91.0" layoutY="318.0" mnemonicParsing="false" onAction="#namePlantPrompt" styleClass="backgroundColor" stylesheets="@cssSheets.css" text="Plant!" visible="false" />
-      <Button fx:id="plantNewSeedButton2" layoutX="275.0" layoutY="318.0" mnemonicParsing="false" onAction="#namePlantPrompt" styleClass="backgroundColor" stylesheets="@cssSheets.css" text="Plant!" visible="false" />
-      <Button fx:id="plantNewSeedButton3" layoutX="457.0" layoutY="320.0" mnemonicParsing="false" onAction="#namePlantPrompt" styleClass="backgroundColor" stylesheets="@cssSheets.css" text="Plant!" visible="false" />
+      <Button fx:id="plantNewSeedButton1" layoutX="87.0" layoutY="318.0" mnemonicParsing="false" onAction="#namePlantPrompt" prefHeight="25.0" prefWidth="54.0" styleClass="backgroundColor" stylesheets="@cssSheets.css" visible="false">
+         <graphic>
+            <ImageView fitHeight="19.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../images/pictureFonts/plantOilFont2.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
+      <Button fx:id="plantNewSeedButton2" layoutX="269.0" layoutY="321.0" mnemonicParsing="false" onAction="#namePlantPrompt" styleClass="backgroundColor" stylesheets="@cssSheets.css" visible="false">
+         <graphic>
+            <ImageView fitHeight="19.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../images/pictureFonts/plantOilFont2.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
+      <Button fx:id="plantNewSeedButton3" layoutX="451.0" layoutY="320.0" mnemonicParsing="false" onAction="#namePlantPrompt" prefHeight="25.0" prefWidth="56.0" styleClass="backgroundColor" stylesheets="@cssSheets.css" visible="false">
+         <graphic>
+            <ImageView fitHeight="32.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../images/pictureFonts/plantOilFont2.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
       <Button fx:id="plantNewSeedButton" layoutX="491.0" layoutY="360.0" mnemonicParsing="false" onAction="#goBackToLibrary" prefHeight="25.0" prefWidth="111.0" styleClass="button1" stylesheets="@cssSheets.css" textOverrun="CLIP">
          <effect>
             <DropShadow blurType="GAUSSIAN">
@@ -115,14 +178,14 @@
             <Font name="System Bold Italic" size="12.0" />
          </font>
       </Button>
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="195.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="28.0" fitWidth="283.0" layoutX="195.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../images/pictureFonts/ChooseSeedText.png" />
+            <Image url="@../../../images/pictureFonts/CHooseSeedOil.png" />
          </image>
       </ImageView>
-      <ImageView disable="true" fitHeight="18.0" fitWidth="131.0" layoutX="511.0" layoutY="364.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView disable="true" fitHeight="18.0" fitWidth="73.0" layoutX="511.0" layoutY="364.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../images/pictureFonts/backPixelFont.png" />
+            <Image url="@../../../images/pictureFonts/backOilFont.png" />
          </image>
       </ImageView>
       <JFXButton fx:id="switchSeedButtonLeft" layoutX="-12.0" layoutY="156.0" onAction="#switchSeedsToLeft" prefHeight="88.0" prefWidth="52.0" styleClass="buttonNextPageSeedMenuLeft" stylesheets="@cssSheets.css" text="." visible="false" />
@@ -143,34 +206,84 @@
       <ProgressBar fx:id="difficultyBarThree11" layoutX="227.0" layoutY="265.0" prefHeight="14.0" prefWidth="143.0" progress="0.37" stylesheets="@cssSheets.css" visible="false" />
       <Button fx:id="chooseSeedButtonExtended4" layoutX="43.0" layoutY="111.0" mnemonicParsing="false" onAction="#hideExtendedSeedMenu4" prefHeight="246.0" prefWidth="152.0" styleClass="backgroundColor" stylesheets="@cssSheets.css" visible="false" />
       <Rectangle fx:id="seedSpecies4" arcHeight="5.0" arcWidth="5.0" disable="true" fill="#92eaa9" height="26.0" layoutX="53.0" layoutY="244.0" stroke="BLACK" strokeType="INSIDE" visible="false" width="131.0" />
-      <Label fx:id="seedSpeciesLabel4" layoutX="94.0" layoutY="249.0" text="Sunflower" visible="false" />
+      <Label fx:id="seedSpeciesLabel4" layoutX="94.0" layoutY="249.0" visible="false">
+         <graphic>
+            <ImageView fitHeight="14.0" fitWidth="114.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../images/pictureFonts/sunflowerOilFont.png" />
+               </image>
+            </ImageView>
+         </graphic></Label>
       <ProgressBar fx:id="seedDifficultyBar4" layoutX="47.0" layoutY="303.0" prefHeight="14.0" prefWidth="143.0" progress="0.53" stylesheets="@cssSheets.css" visible="false" />
       <Rectangle fx:id="seedSpeciesDifficualty4" arcHeight="5.0" arcWidth="5.0" disable="true" fill="#92eaa9" height="26.0" layoutX="54.0" layoutY="273.0" stroke="BLACK" strokeType="INSIDE" visible="false" width="131.0" />
-      <Label fx:id="seedDifficualty4" layoutX="92.0" layoutY="277.0" text="Difficualty" visible="false" />
+      <Label fx:id="seedDifficualty4" layoutX="92.0" layoutY="277.0" visible="false">
+         <graphic>
+            <ImageView fitHeight="21.0" fitWidth="85.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../images/pictureFonts/difficultyOilFont.png" />
+               </image>
+            </ImageView>
+         </graphic></Label>
       <ImageView fx:id="seedImage4" disable="true" fitHeight="134.0" fitWidth="84.0" layoutX="78.0" layoutY="115.0" pickOnBounds="true" preserveRatio="true" visible="false">
          <image>
             <Image url="@../../../images/plant4/sunflowerLvl4.png" />
          </image>
       </ImageView>
-      <Button fx:id="plantNewSeedButton4" layoutX="94.0" layoutY="320.0" mnemonicParsing="false" onAction="#namePlantPrompt" styleClass="backgroundColor" stylesheets="@cssSheets.css" text="Plant!" visible="false" />
+      <Button fx:id="plantNewSeedButton4" layoutX="92.0" layoutY="320.0" mnemonicParsing="false" onAction="#namePlantPrompt" prefHeight="14.0" prefWidth="56.0" styleClass="backgroundColor" stylesheets="@cssSheets.css" visible="false">
+         <graphic>
+            <ImageView disable="true" fitHeight="22.0" fitWidth="41.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../images/pictureFonts/plantOilFont2.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
       <Button fx:id="chooseSeedButtonExtended5" layoutX="224.0" layoutY="111.0" mnemonicParsing="false" onAction="#hideExtendedSeedMenu5" prefHeight="246.0" prefWidth="152.0" styleClass="backgroundColor" stylesheets="@cssSheets.css" visible="false" />
       <Rectangle fx:id="seedSpecies5" arcHeight="5.0" arcWidth="5.0" disable="true" fill="#92eaa9" height="26.0" layoutX="235.0" layoutY="244.0" stroke="BLACK" strokeType="INSIDE" visible="false" width="131.0" />
-      <Label fx:id="seedSpeciesLabel5" layoutX="275.0" layoutY="249.0" text="Snakeplant" visible="false" />
+      <Label fx:id="seedSpeciesLabel5" layoutX="275.0" layoutY="249.0" visible="false">
+         <graphic>
+            <ImageView fitHeight="15.0" fitWidth="1348.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../images/pictureFonts/snakeplantOilFont.png" />
+               </image>
+            </ImageView>
+         </graphic></Label>
       <ProgressBar fx:id="seedDifficultyBar5" layoutX="228.0" layoutY="303.0" prefHeight="14.0" prefWidth="143.0" progress="0.53" stylesheets="@cssSheets.css" visible="false" />
       <Rectangle fx:id="seedSpeciesDifficualty5" arcHeight="5.0" arcWidth="5.0" disable="true" fill="#92eaa9" height="26.0" layoutX="235.0" layoutY="273.0" stroke="BLACK" strokeType="INSIDE" visible="false" width="131.0" />
-      <Label fx:id="seedDifficualty5" layoutX="273.0" layoutY="277.0" text="Difficualty" visible="false" />
-      <ImageView fx:id="seedImage5" disable="true" fitHeight="141.0" fitWidth="163.0" layoutX="240.0" layoutY="113.0" pickOnBounds="true" preserveRatio="true" visible="false">
+      <Label fx:id="seedDifficualty5" layoutX="273.0" layoutY="277.0" visible="false">
+         <graphic>
+            <ImageView fitHeight="25.0" fitWidth="91.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../images/pictureFonts/difficultyOilFont.png" />
+               </image>
+            </ImageView>
+         </graphic></Label>
+      <ImageView fx:id="seedImage5" disable="true" fitHeight="141.0" fitWidth="163.0" layoutX="234.0" layoutY="109.0" pickOnBounds="true" preserveRatio="true" visible="false">
          <image>
             <Image url="@../../../images/plant5/snakeplantLvl4.png" />
          </image>
       </ImageView>
-      <Button fx:id="plantNewSeedButton5" layoutX="276.0" layoutY="320.0" mnemonicParsing="false" onAction="#namePlantPrompt" styleClass="backgroundColor" stylesheets="@cssSheets.css" text="Plant!" visible="false" />
+      <Button fx:id="plantNewSeedButton5" layoutX="270.0" layoutY="320.0" mnemonicParsing="false" onAction="#namePlantPrompt" prefHeight="25.0" prefWidth="56.0" styleClass="backgroundColor" stylesheets="@cssSheets.css" visible="false">
+         <graphic>
+            <ImageView fitHeight="23.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../images/pictureFonts/plantOilFont2.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
       <Rectangle fx:id="namePlantPrompt" arcHeight="5.0" arcWidth="5.0" fill="#61523a" height="113.0" layoutX="176.0" layoutY="109.0" stroke="BLACK" strokeType="INSIDE" visible="false" width="247.0" />
       <TextField fx:id="namePlantField" layoutX="216.0" layoutY="183.0" promptText="ex.  Spike" visible="false" />
-      <Label fx:id="nameYourPlantLabel" layoutX="191.0" layoutY="130.0" text="Name your plant!" visible="false">
+      <Label fx:id="nameYourPlantLabel" layoutX="187.0" layoutY="139.0" visible="false">
          <font>
             <Font name="System Bold" size="26.0" />
          </font>
+         <graphic>
+            <ImageView fitHeight="42.0" fitWidth="226.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../images/pictureFonts/nameYourPlantOilFont.png" />
+               </image>
+            </ImageView>
+         </graphic>
       </Label>
       <Button fx:id="closeNamePlantButton" layoutX="396.0" layoutY="110.0" mnemonicParsing="false" onAction="#hideNamePrompt" prefHeight="15.0" prefWidth="26.0" styleClass="buttonExit" stylesheets="@cssSheets.css" text="X" textOverrun="CLIP" visible="false">
          <effect>
