--- a/src/main/resources/com/example/plantwidget_g18_gui/hello-view.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/hello-view.fxml
@@ -22,20 +22,6 @@
       <CubicCurve controlX1="-222.0" controlX2="-56.0" controlY1="-22.3740234375" controlY2="690.0" endX="590.7599487304688" endY="-22.3740234375" fill="#796a4b" layoutX="20.0" layoutY="20.0" startX="590.0000610351562" startY="390.0" stroke="BLACK" />
       <CubicCurve controlX1="-18.0" controlX2="197.8313446044922" controlY1="46.0" controlY2="365.6242980957031" endX="547.8313598632812" endY="-37.16864776611328" fill="#796a4b" layoutX="10.0" layoutY="10.0" startX="-111.0" startY="-3.0" stroke="BLACK" />
       <Pane disable="true" layoutX="482.0" layoutY="261.0" prefHeight="385.0" prefWidth="360.0" style="-fx-background-color: #61523a; -fx-background-radius: 23;" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#92eaa9" height="181.0" layoutX="14.0" layoutY="14.0" stroke="BLACK" strokeType="INSIDE" width="152.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#92eaa9" height="181.0" layoutX="224.0" layoutY="14.0" stroke="BLACK" strokeType="INSIDE" width="152.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#92eaa9" height="181.0" layoutX="434.0" layoutY="14.0" stroke="BLACK" strokeType="INSIDE" width="152.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#92eaa9" height="147.0" layoutX="15.0" layoutY="239.0" stroke="BLACK" strokeType="INSIDE" width="121.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#92eaa9" height="147.0" layoutX="165.0" layoutY="239.0" stroke="BLACK" strokeType="INSIDE" width="121.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#92eaa9" height="147.0" layoutX="313.0" layoutY="239.0" stroke="BLACK" strokeType="INSIDE" width="121.0" />
-      <ImageView fx:id="imagePlantOne" fitHeight="88.0" fitWidth="128.0" layoutX="27.0" layoutY="39.0" pickOnBounds="true" />
-      <ImageView fx:id="imagePlantTwo" fitHeight="88.0" fitWidth="128.0" layoutX="235.0" layoutY="39.0" pickOnBounds="true" />
-      <ImageView fx:id="imagePlantThree" fitHeight="88.0" fitWidth="128.0" layoutX="446.0" layoutY="39.0" pickOnBounds="true" />
-      <ImageView fx:id="imagePlantFour" fitHeight="88.0" fitWidth="111.0" layoutX="20.0" layoutY="246.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="imagePlantFive" fitHeight="88.0" fitWidth="111.0" layoutX="170.0" layoutY="246.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="imagePlantSix" fitHeight="88.0" fitWidth="111.0" layoutX="318.0" layoutY="246.0" pickOnBounds="true" preserveRatio="true" />
-      <ProgressBar fx:id="plantWaterBarOne" layoutX="19.0" layoutY="125.0" prefHeight="14.0" prefWidth="143.0" progress="0.78" visible="false" />
-      <ProgressBar fx:id="plantHealthBarOne" layoutX="19.0" layoutY="139.0" prefHeight="14.0" prefWidth="143.0" progress="0.53" styleClass="progressBarHealth" stylesheets="@cssSheets.css" visible="false" />
       <Button fx:id="exitButton1" layoutX="570.0" layoutY="2.0" mnemonicParsing="false" onAction="#closeProgram" prefHeight="15.0" prefWidth="33.0" styleClass="buttonExit" stylesheets="@cssSheets.css" text="X" textFill="WHITE" textOverrun="CLIP">
          <effect>
             <DropShadow blurType="GAUSSIAN">
@@ -48,9 +34,6 @@
             <Font name="System Bold Italic" size="12.0" />
          </font>
       </Button>
-      <JFXButton fx:id="plantNewSeedButton" buttonType="RAISED" layoutX="489.0" layoutY="261.0" onAction="#goTochooseSeedScene" prefHeight="25.0" prefWidth="111.0" ripplerFill="BLACK" styleClass="button1" text="New Seed" />
-      <JFXButton fx:id="goToLegendaryPlants" buttonType="RAISED" layoutX="489.0" layoutY="293.0" onAction="#goToLegendaryScene" prefHeight="25.0" prefWidth="111.0" ripplerFill="BLACK" styleClass="buttonLegendary" text="Legendary" textFill="WHITE" />
-      <JFXButton fx:id="settingsButton" buttonType="RAISED" layoutX="489.0" layoutY="325.0" onAction="#goToSettings" prefHeight="25.0" prefWidth="111.0" ripplerFill="BLACK" styleClass="buttonSettings" text="Settings" textFill="WHITE" />
       <JFXButton fx:id="waterThePlantOne" buttonType="RAISED" layoutX="15.0" layoutY="159.0" onAction="#waterPlantOne" prefHeight="25.0" prefWidth="74.0" ripplerFill="#5d69c6" styleClass="buttonWater" text="Water" visible="false" />
       <JFXButton fx:id="selectPlantButton" buttonType="RAISED" layoutX="91.0" layoutY="159.0" onAction="#selectPlantOne" prefHeight="25.0" prefWidth="74.0" styleClass="buttonSelect" text="Select" visible="false">
          <ripplerFill>
@@ -75,78 +58,8 @@
             </LinearGradient>
          </ripplerFill>
       </JFXButton>
-      <JFXButton fx:id="exitButton" buttonType="RAISED" layoutX="488.0" layoutY="357.0" onAction="#closeProgram" prefHeight="25.0" prefWidth="111.0" ripplerFill="BLACK" styleClass="buttonExit" text="Exit Application" textFill="WHITE" />
-      <ProgressBar fx:id="plantWaterBarTwo" layoutX="229.0" layoutY="124.0" prefHeight="14.0" prefWidth="143.0" progress="0.78" visible="false" />
-      <ProgressBar fx:id="plantHealthBarTwo" layoutX="229.0" layoutY="138.0" prefHeight="14.0" prefWidth="143.0" progress="0.53" styleClass="progressBarHealth" stylesheets="@cssSheets.css" visible="false" />
-      <JFXButton fx:id="waterPlantTwo" buttonType="RAISED" layoutX="225.0" layoutY="158.0" onAction="#waterPlantTwo" prefHeight="25.0" prefWidth="74.0" ripplerFill="#5d69c6" styleClass="buttonWater" text="Water Plant" visible="false" />
-      <JFXButton fx:id="selectPlantTwo" buttonType="RAISED" layoutX="301.0" layoutY="158.0" onAction="#selectPlantTwo" prefHeight="25.0" prefWidth="74.0" styleClass="buttonSelect" text="Select" visible="false">
-         <ripplerFill>
-            <LinearGradient cycleMethod="REFLECT" endX="1.0" endY="1.0">
-               <stops>
-                  <Stop>
-                     <color>
-                        <Color red="0.9176470637321472" green="0.9215686321258545" blue="0.9176470637321472" />
-                     </color>
-                  </Stop>
-                  <Stop offset="0.010067114093959731">
-                     <color>
-                        <Color red="0.501960813999176" green="0.8039215803146362" blue="0.5764706134796143" />
-                     </color>
-                  </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color red="0.9210526347160339" green="0.48184698820114136" blue="0.8771320581436157" />
-                     </color>
-                  </Stop>
-               </stops>
-            </LinearGradient>
-         </ripplerFill>
-      </JFXButton>
       <Label fx:id="plantLeveltwo" layoutX="286.0" layoutY="17.0" visible="false" />
-      <ProgressBar fx:id="plantWaterBarThree" layoutX="439.0" layoutY="129.0" prefHeight="14.0" prefWidth="143.0" progress="0.78" visible="false" />
-      <ProgressBar fx:id="plantHealthBarThree" layoutX="439.0" layoutY="143.0" prefHeight="14.0" prefWidth="143.0" progress="0.53" styleClass="progressBarHealth" stylesheets="@cssSheets.css" visible="false" />
-      <JFXButton fx:id="waterPlantThree" buttonType="RAISED" layoutX="435.0" layoutY="163.0" onAction="#waterPlantThree" prefHeight="25.0" prefWidth="74.0" ripplerFill="#5d69c6" styleClass="buttonWater" text="Water" visible="false" />
-      <JFXButton fx:id="selectPlantThree" buttonType="RAISED" layoutX="511.0" layoutY="163.0" onAction="#selectPlantThree" prefHeight="25.0" prefWidth="74.0" styleClass="buttonSelect" text="Select" visible="false">
-         <ripplerFill>
-            <LinearGradient cycleMethod="REFLECT" endX="1.0" endY="1.0">
-               <stops>
-                  <Stop>
-                     <color>
-                        <Color red="0.9176470637321472" green="0.9215686321258545" blue="0.9176470637321472" />
-                     </color>
-                  </Stop>
-                  <Stop offset="0.010067114093959731">
-                     <color>
-                        <Color red="0.501960813999176" green="0.8039215803146362" blue="0.5764706134796143" />
-                     </color>
-                  </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color red="0.9210526347160339" green="0.48184698820114136" blue="0.8771320581436157" />
-                     </color>
-                  </Stop>
-               </stops>
-            </LinearGradient>
-         </ripplerFill>
-      </JFXButton>
       <Label fx:id="plantLevelThree" layoutX="496.0" layoutY="22.0" visible="false" />
-      <JFXButton fx:id="waterPlantOne" buttonType="RAISED" layoutX="15.0" layoutY="159.0" onAction="#waterPlantOne" prefHeight="25.0" prefWidth="74.0" ripplerFill="#5d69c6" styleClass="buttonWater" text="Water" visible="false" />
-      <JFXButton fx:id="selectPlantOne" buttonType="RAISED" layoutX="91.0" layoutY="159.0" onAction="#selectPlantOne" prefHeight="25.0" prefWidth="74.0" styleClass="buttonSelect" text="Select" visible="false" />
-      <ImageView fx:id="pot" fitHeight="88.0" fitWidth="94.0" layoutX="37.0" layoutY="49.0" pickOnBounds="true" visible="false">
-         <image>
-            <Image url="@../../../images/peter_pot.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="pot2" fitHeight="96.0" fitWidth="104.0" layoutX="247.0" layoutY="45.0" pickOnBounds="true" visible="false">
-         <image>
-            <Image url="@../../../images/peter_pot.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="pot3" fitHeight="88.0" fitWidth="94.0" layoutX="464.0" layoutY="49.0" pickOnBounds="true" visible="false">
-         <image>
-            <Image url="@../../../images/peter_pot.png" />
-         </image>
-      </ImageView>
       <Label fx:id="levelPlantOne" layoutX="76.0" layoutY="19.0" visible="false" />
       <ImageView disable="true" fitHeight="17.0" fitWidth="22.0" layoutX="496.0" layoutY="329.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -163,6 +76,73 @@
             <Image url="@../../../images/legend2.png" />
          </image>
       </ImageView>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#92eaa9" height="226.0" layoutX="8.0" layoutY="91.0" stroke="BLACK" strokeType="INSIDE" width="183.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#92eaa9" height="226.0" layoutX="209.0" layoutY="91.0" stroke="BLACK" strokeType="INSIDE" width="183.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#92eaa9" height="226.0" layoutX="410.0" layoutY="91.0" stroke="BLACK" strokeType="INSIDE" width="183.0" />
+      <ImageView fx:id="imagePlantOne" fitHeight="88.0" fitWidth="128.0" layoutX="28.0" layoutY="163.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imagePlantTwo" fitHeight="138.0" fitWidth="74.0" layoutX="262.0" layoutY="140.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imagePlantThree" fitHeight="88.0" fitWidth="111.0" layoutX="450.0" layoutY="149.0" pickOnBounds="true" preserveRatio="true" />
+      <ProgressBar fx:id="plantWaterBarOne" layoutX="14.0" layoutY="246.0" prefHeight="17.0" prefWidth="171.0" progress="0.78" visible="false" />
+      <ProgressBar fx:id="plantHealthBarOne" layoutX="14.0" layoutY="264.0" prefHeight="17.0" prefWidth="171.0" progress="0.53" styleClass="progressBarHealth" stylesheets="@cssSheets.css" visible="false" />
+      <ProgressBar fx:id="plantWaterBarTwo" layoutX="216.0" layoutY="246.0" prefHeight="17.0" prefWidth="171.0" progress="0.78" visible="false" />
+      <ProgressBar fx:id="plantHealthBarTwo" layoutX="216.0" layoutY="264.0" prefHeight="17.0" prefWidth="171.0" progress="0.53" styleClass="progressBarHealth" stylesheets="@cssSheets.css" visible="false" />
+      <JFXButton fx:id="waterPlantTwo" buttonType="RAISED" layoutX="210.0" layoutY="286.0" onAction="#waterPlantTwo" prefHeight="25.0" prefWidth="88.0" ripplerFill="#5d69c6" styleClass="buttonWater" text="Water Plant" visible="false" />
+      <JFXButton fx:id="selectPlantTwo" buttonType="RAISED" layoutX="303.0" layoutY="286.0" onAction="#selectPlantTwo" prefHeight="25.0" prefWidth="88.0" styleClass="buttonSelect" text="Select PLant" visible="false">
+         <ripplerFill>
+            <LinearGradient cycleMethod="REFLECT" endX="1.0" endY="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="0.9176470637321472" green="0.9215686321258545" blue="0.9176470637321472" />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.010067114093959731">
+                     <color>
+                        <Color red="0.501960813999176" green="0.8039215803146362" blue="0.5764706134796143" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.9210526347160339" green="0.48184698820114136" blue="0.8771320581436157" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </ripplerFill>
+      </JFXButton>
+      <ProgressBar fx:id="plantWaterBarThree" layoutX="416.0" layoutY="246.0" prefHeight="17.0" prefWidth="171.0" progress="0.78" visible="false" />
+      <ProgressBar fx:id="plantHealthBarThree" layoutX="416.0" layoutY="264.0" prefHeight="17.0" prefWidth="171.0" progress="0.53" styleClass="progressBarHealth" stylesheets="@cssSheets.css" visible="false" />
+      <JFXButton fx:id="waterPlantThree" buttonType="RAISED" layoutX="411.0" layoutY="285.0" onAction="#waterPlantThree" prefHeight="25.0" prefWidth="88.0" ripplerFill="#5d69c6" styleClass="buttonWater" text="Water Plant" visible="false" />
+      <JFXButton fx:id="selectPlantThree" buttonType="RAISED" layoutX="504.0" layoutY="285.0" onAction="#selectPlantThree" prefHeight="25.0" prefWidth="88.0" styleClass="buttonSelect" text="Select PLant" visible="false">
+         <ripplerFill>
+            <LinearGradient cycleMethod="REFLECT" endX="1.0" endY="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="0.9176470637321472" green="0.9215686321258545" blue="0.9176470637321472" />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.010067114093959731">
+                     <color>
+                        <Color red="0.501960813999176" green="0.8039215803146362" blue="0.5764706134796143" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.9210526347160339" green="0.48184698820114136" blue="0.8771320581436157" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </ripplerFill>
+      </JFXButton>
+      <JFXButton fx:id="waterPlantOne" buttonType="RAISED" layoutX="9.0" layoutY="286.0" onAction="#waterPlantOne" prefHeight="25.0" prefWidth="88.0" ripplerFill="#5d69c6" styleClass="buttonWater" text="Water Plant" visible="false" />
+      <JFXButton fx:id="selectPlantOne" buttonType="RAISED" layoutX="102.0" layoutY="286.0" onAction="#selectPlantOne" prefHeight="25.0" prefWidth="88.0" styleClass="buttonSelect" text="Select Plant" visible="false" />
+      <JFXButton fx:id="plantNewSeedButton" buttonType="RAISED" layoutX="489.0" layoutY="261.0" onAction="#goTochooseSeedScene" prefHeight="25.0" prefWidth="111.0" ripplerFill="BLACK" styleClass="button1" text="New Seed" />
+      <JFXButton fx:id="goToLegendaryPlants" buttonType="RAISED" layoutX="489.0" layoutY="293.0" onAction="#goToLegendaryScene" prefHeight="25.0" prefWidth="111.0" ripplerFill="BLACK" styleClass="buttonLegendary" text="Legendary" textFill="WHITE" />
+      <JFXButton fx:id="settingsButton" buttonType="RAISED" layoutX="489.0" layoutY="325.0" onAction="#goToSettings" prefHeight="25.0" prefWidth="111.0" ripplerFill="BLACK" styleClass="buttonSettings" text="Settings" textFill="WHITE" />
+      <JFXButton fx:id="exitButton" buttonType="RAISED" layoutX="488.0" layoutY="357.0" onAction="#closeProgram" prefHeight="25.0" prefWidth="111.0" ripplerFill="BLACK" styleClass="buttonExit" text="Exit Application" textFill="WHITE" />
+      <JFXButton fx:id="menuButton" layoutX="8.0" layoutY="345.0" />
 
    </children>
    <effect>
